# cv-hw

hw01/: CMakeLists.txt  main.cpp
hw02/: CMakeLists.txt  main.cpp
hw03/: CMakeLists.txt  EigenFaceRecognizer.cpp  EigenFaceRecognizer.h  main.cpp  predict.cpp  train.cpp  utils.cpp  utils.h
